k8s/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bandung-coffeeshop-fe
  namespace: envoy
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy
      sectionName: bdgcafe-com
  hostnames:
    - bdgcafe.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bandung-coffeeshop-fe-service
          namespace: default
          port: 80
